--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,5 +1,3 @@
-home = C:\Python312
+home = /Library/Frameworks/Python.framework/Versions/3.10/bin
 include-system-site-packages = false
-version = 3.12.0
-executable = C:\Python312\python.exe
-command = C:\Python312\python.exe -m venv C:\Users\budhr\Echotune\env
+version = 3.10.4
